@@ -21,11 +21,9 @@ import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.salespointframework.catalog.Product;
-import org.salespointframework.catalog.ProductIdentifier;
 import org.salespointframework.order.Order;
 import org.salespointframework.order.Order.OrderCancelled;
 import org.salespointframework.order.Order.OrderCompleted;
@@ -35,14 +33,15 @@ import org.salespointframework.order.OrderCompletionReport.OrderLineCompletion;
 import org.salespointframework.order.OrderLine;
 import org.springframework.context.ApplicationListener;
 import org.springframework.context.event.EventListener;
+import org.springframework.data.util.Optionals;
 import org.springframework.stereotype.Component;
 import org.springframework.util.Assert;
 
 /**
  * {@link ApplicationListener} for {@link OrderCompleted} events to verify that sufficient amounts of the
  * {@link Product} the {@link OrderLine}s contained in the {@link Order} point to are available in the
- * {@link Inventory}.
- * 
+ * {@link UniqueInventory}.
+ *
  * @author Oliver Gierke
  * @since 6.3
  */
@@ -53,13 +52,15 @@ public class InventoryOrderEventListener {
 	private static final String NOT_ENOUGH_STOCK = "Number of items requested by the OrderLine is greater than the number available in the Inventory. Please re-stock.";
 	private static final String NO_INVENTORY_ITEM = "No inventory item with given product indentifier found in inventory. Have you initialized your inventory? Do you need to re-stock it?";
 
-	private final @NonNull Inventory<InventoryItem> inventory;
 	private final @NonNull List<LineItemFilter> filters;
 
+	private final @NonNull MultiInventory<MultiInventoryItem> inventory;
+	private final @NonNull UniqueInventory<UniqueInventoryItem> uniqueInventory;
+
 	/**
-	 * Invokes {@link Inventory} checks for all {@link OrderLine} of the {@link Order} in the given {@link OrderCompleted}
-	 * event.
-	 * 
+	 * Invokes {@link UniqueInventory} checks for all {@link OrderLine} of the {@link Order} in the given
+	 * {@link OrderCompleted} event.
+	 *
 	 * @param event must not be {@literal null}.
 	 * @throws OrderCompletionFailure in case any of the {@link OrderLine} items contained in the order and supported by
 	 *           the configured {@link LineItemFilter} is not available in sufficient quantity.
@@ -69,11 +70,10 @@ public class InventoryOrderEventListener {
 
 		Assert.notNull(event, "OrderCompletedEvent must not be null!");
 
-		Order order = event.getOrder();
-
-		List<OrderLineCompletion> collect = order.getOrderLines().stream()//
+		var order = event.getOrder();
+		var collect = order.getOrderLines() //
 				.map(this::verify)//
-				.collect(Collectors.toList());
+				.toList();
 
 		OrderCompletionReport.forCompletions(order, collect) //
 				.onError(OrderCompletionFailure::new);
@@ -81,26 +81,26 @@ public class InventoryOrderEventListener {
 
 	/**
 	 * Rolls back the stock decreases handled for {@link OrderCompleted} events.
-	 * 
+	 *
 	 * @param event must not be {@literal null}.
 	 */
 	@EventListener
 	public void on(OrderCancelled event) {
 
-		Order order = event.getOrder();
+		var order = event.getOrder();
 
 		if (!order.isCompleted()) {
 			return;
 		}
 
 		order.getOrderLines() //
-				.map(this::updateStockFor) //
-				.forEach(inventory::save);
+				.flatMap(this::updateStockFor) //
+				.forEach(uniqueInventory::save);
 	}
 
 	/**
-	 * Verifies the given {@link OrderLine} for sufficient stock in the {@link Inventory}.
-	 * 
+	 * Verifies the given {@link OrderLine} for sufficient stock in the {@link UniqueInventory}.
+	 *
 	 * @param orderLine must not be {@literal null}.
 	 * @return
 	 */
@@ -112,28 +112,56 @@ public class InventoryOrderEventListener {
 			return OrderLineCompletion.success(orderLine);
 		}
 
-		ProductIdentifier identifier = orderLine.getProductIdentifier();
-		Optional<InventoryItem> inventoryItem = inventory.findByProductIdentifier(identifier);
+		var identifier = orderLine.getProductIdentifier();
+		var item = uniqueInventory.findByProductIdentifier(identifier);
 
-		return inventoryItem //
-				.map(it -> it.hasSufficientQuantity(orderLine.getQuantity())) //
-				.map(sufficient -> sufficient ? success(orderLine) : error(orderLine, NOT_ENOUGH_STOCK)) //
-				.orElse(error(orderLine, NO_INVENTORY_ITEM)) //
-				.onSuccess(it -> {
-
-					inventoryItem //
-							.map(item -> item.decreaseQuantity(it.getQuantity())) //
-							.ifPresent(inventory::save);
-				});
+		return item.map(it -> verifyAndUpdateUnique(it, orderLine)) //
+				.orElseGet(() -> assertAtLeastOneExists(orderLine));
 	}
 
-	private InventoryItem updateStockFor(OrderLine orderLine) {
+	/**
+	 * Verifies that the given UI
+	 *
+	 * @param item
+	 * @param orderLine
+	 * @return
+	 */
+	private OrderLineCompletion verifyAndUpdateUnique(UniqueInventoryItem item, OrderLine orderLine) {
+		return hasSufficientQuantity(item, orderLine)
+				.onSuccess(it -> uniqueInventory.save(item.decreaseQuantity(it.getQuantity())));
+	}
 
-		ProductIdentifier productIdentifier = orderLine.getProductIdentifier();
+	/**
+	 * Creates a new {@link OrderLineCompletion} verifying that at least one {@link MultiInventoryItem} exists.
+	 *
+	 * @param orderLine must not be {@literal null}.
+	 * @return
+	 */
+	private OrderLineCompletion assertAtLeastOneExists(OrderLine orderLine) {
 
-		return inventory.findByProductIdentifier(productIdentifier) //
-				.orElseThrow(() -> new IllegalArgumentException(
-						String.format("Couldn't find InventoryItem for product %s!", productIdentifier))) //
-				.increaseQuantity(orderLine.getQuantity());
+		var items = inventory.findByProductIdentifier(orderLine.getProductIdentifier());
+
+		return items.isEmpty() ? error(orderLine, NO_INVENTORY_ITEM) : skipped(orderLine);
+	}
+
+	private Stream<UniqueInventoryItem> updateStockFor(OrderLine orderLine) {
+
+		var productIdentifier = orderLine.getProductIdentifier();
+		var item = uniqueInventory.findByProductIdentifier(productIdentifier)
+				.map(it -> it.increaseQuantity(orderLine.getQuantity()));
+
+		if (!item.isPresent() && inventory.findByProductIdentifier(productIdentifier).isEmpty()) {
+			throw new IllegalArgumentException(
+					String.format("Couldn't find InventoryItem for product %s!", productIdentifier));
+		}
+
+		return Optionals.toStream(item);
+	}
+
+	private static OrderLineCompletion hasSufficientQuantity(InventoryItem<?> item, OrderLine orderLine) {
+
+		return item.hasSufficientQuantity(orderLine.getQuantity()) //
+				? success(orderLine) //
+				: error(orderLine, NOT_ENOUGH_STOCK);
 	}
 }
